# vulkan-framework

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: CMakeLists.txt
shaders/: shader.vert
source/: Application.cpp  Application.hpp  config.hpp  main.cpp  utility.hpp  window.cpp  window.hpp
source/math/: Matrix.hpp  Rectangle.hpp  Vector2.hpp  Vector3.hpp
source/renderer/: Device.cpp  Device.hpp  Instance.cpp  Instance.hpp  Swapchain.cpp  Swapchain.hpp
source/renderer/graphics/: DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  PushConstants.cpp  PushConstants.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
source/renderer/graphics/ressources/: Buffer.cpp  Buffer.hpp  DecriptorSet.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  Image.cpp  Image.hpp  Mesh.cpp  Mesh.hpp
source/renderer/sync/: CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  Fence.cpp  Fence.hpp  Semaphore.cpp  Semaphore.hpp
